@@ -375,16 +375,7 @@ This is the ``to do'' list, not necessarily complete, for Csound and CsoundVST:
 \item Fix bug in -z option.
 \item Get CsoundVST working in Cubase.
 \item Complete this document sufficiently to get users started building running Csound and CsoundVST with MinGW and Linux.
-\item Tutorial scores:
-\begin{enumerate}
-\item toot.csd
-\item trapped.csd
-\item trappedrt.csd
-\item midi.csd
-\item vst.csd
-\item koch.py
-\item realtime.py
-\end{enumerate}
+\item Get all the example scores working out of the box, and add one for real-time Python performance with a Python GUI.
 \item Automate making gcc import libraries for Python etc. on Windows.
 \item Get MIDI input and output working on Windows.
 \item Singleton class for CsoundVST or CppSound so that VST scripts can be identical to Python interpreter scripts.
@@ -392,8 +383,9 @@ This is the ``to do'' list, not necessarily complete, for Csound and CsoundVST:
 \end{enumerate}
 \item Longer term:
 \begin{enumerate}
-\item Get the Loris plugin opcode into this build.
-\item STK plugin opcodes into this build.
+\item Gabriel's Python opcodes.
+\item The Loris plugin opcodes.
+\item The STK plugin opcodes.
 \item Investigate the Python runtime situation on MinGW.
 \end{enumerate}
 \end{enumerate}
